# aoc_2021

./: Cargo.toml  README.md
.github/workflows/: rust_beta.yml  rust_nightly.yml
assets/06/: init_fish_list.txt  init_graph.txt
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  main.rs
