[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["biancoSolutions <implimail@gmail.com>"]
edition = "2021"

[[bin]]
name = "main"
test = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"